syntax = "proto3";

package hello;

option go_package = "github.com/WisdomEnigma/micro-peers/hello/hello.proto";


message HelloResponse {
    string message = 1;
}

message HelloRequest {
    string message = 2;
}


service HelloService {
    rpc Hello_Service(HelloRequest) returns (HelloResponse);
}